# roberto-holmes.github.io

./: .gitignore  .prettierrc  CNAME  index.html  leaderboard.css  leaderboard.css.map  leaderboard.js  leaderboard.scss  leaderboard.ts  main.css  processing.py  tsconfig.json  wgsl.js
bg/: Cargo.toml  bg.js  bg_rs.d.ts  bg_rs.js  bg_rs_bg.wasm  bg_rs_bg.wasm.d.ts
bg/src/: lib.rs  main.rs  shader.wgsl
data/: 20200905_australia_f1.json  20200919_britain_f1.json  20201003_canada_f1.json  20201016_daytona_gt3.json  20201017_belgium_f1.json  20201024_lemans_gt3.json  20201031_brazil_f1.json  20201113_nurburgring_gt3.json  20201114_bahrain_f1.json  20201128_austria_f1.json  20201211_1_silverstone_gt3.json  20201211_1_silverstone_gt4.json  20201211_2_silverstone_gt3.json  20201211_2_silverstone_gt4.json  20201212_netherlands_f1.json  20201219_1_donington_btcc.json  20201219_2_donington_btcc.json  20210109_italy_f1.json  20210116_1_nurburgring_gt3.json  20210116_1_nurburgring_gt4.json  20210116_2_nurburgring_gt3.json  20210116_2_nurburgring_gt4.json  20210123_spain_f1.json  20210130_1_snetterton_btcc.json  20210130_2_snetterton_btcc.json  20210213_1_monza_gt3.json  20210213_1_monza_gt4.json  20210213_2_monza_gt3.json  20210213_2_monza_gt4.json  20210227_1_thruxton_btcc.json  20210227_2_thruxton_btcc .json  20210313_spa_gt3.json  20210313_spa_gt4.json  20210327_1_oulton_park_btcc.json  20210327_2_oulton_park_btcc.json  20210410_daytona_dpi.json  20210410_daytona_gtlm.json  20210410_daytona_lmp1.json  20210417_bahrain_f1.json  20210424_1_brands_hatch_btcc.json  (+58 more)
(+104 files in other folders)
