[package]
name = "bg_rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "bg"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1"
winit = { version = "0.29", features = ["rwh_05"] }
env_logger = "0.11.6"
log = "0.4"
wgpu = { version = "25.0", features = ["webgl"] }
pollster = "0.3"
bytemuck = { version = "1.16", features = ["derive"] }

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }
